Fixed image overlap.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,19 +1,21 @@
 #Home {
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-rows: 50px 200px;
+  grid-auto-rows: auto;
 }
 
 #homeTitle {
   grid-column-start: 3;
+  grid-column-end: 4;
   text-align: center;
+  padding-bottom: 1rem;
 }
 
 #homeArticle {
   grid-column-start: 1;
   grid-column-end: 6;
   text-align: center;
-  padding-top: 5rem;
+  padding-top: 2rem;
 }
 
 #gravatar {
